--- a/src/components/projects-components/projects/Projects.css
+++ b/src/components/projects-components/projects/Projects.css
@@ -57,7 +57,7 @@
 .projects-card p {
   font-size: 1rem;
   margin: 0 15px 15px;
-  text-align: center;
+  text-align: left;
 }
 
 /* Projects Date */
